implement edit subscriptions
